--- a/1.html
+++ b/1.html
@@ -7,9 +7,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-
+<style>
+    div{
+        width: 100px;
+        height: 100px;
+        background-color: red;
+    }
+</style>
 <body>
-  <p>牛逼</p>
+   
+
+<div></div>
 </body>
 
 </html>
